--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Portfolio Adam Beloucif v2026 - Data Engineer & Fullstack Developer",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
+    "dev:http": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -27,7 +28,7 @@
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "lucide-react": "^0.563.0",
-    "next": "^14.2.35",
+    "next": "^15.5.12",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
